# MLX-Week5-PPO

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt  rosh.ipynb
advantage/: __init__.py  gae_advantage.py  return_calculator.py  td_error.py
base_setup/: __init__.py  base_setup.py  lora_setup.py  model_setup.py  tokenizer_setup.py
config/: __init__.py  ppo_config.py
docs/: architecture_diagram.txt  component_interactions.txt  training_flow.txt
examples/: basic_usage.py
experience_buffer/: __init__.py  buffer.py
models/: __init__.py  base_model.py  policy_model.py  reward_model.py  sft_model.py  value_model.py
ppo_trainer/: __init__.py  generator.py  model_trainer.py  ppo_trainer.py  reward_computer.py  value_adder.py
reward_kl/: __init__.py  kl_divergence.py  reward_adjuster.py
tests/: test_ppo_components.py
token_attribution/: __init__.py  extractor.py  sa_pair_builder.py  token_attribution.py
training/: __init__.py  policy_loss.py  policy_ratio.py  value_loss.py
