[project]
name = "mlx-week5-ppo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "numpy>=2.3.1",
    "peft>=0.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]
